2008-05-29  Per Abrahamsen  <abraham@dina.kvl.dk>

	* condition_time.C: Fix timestep for "*ly" models.

2008-05-23  Per Abrahamsen  <abraham@dina.kvl.dk>

	* tertiary_instant.C: New model.
	* Makefile (MODELS): Added it.

2008-05-02  Per Abrahamsen  <abraham@dina.kvl.dk>

	* volume_box.h, volume_box.C: Gave it a public interface.
	* Makefile (MODELS, SPECIALS): Moved 'volume_box.C'.

	* geometry.C, geometry.h (Geometry::total_soil): New variant with
	'Volume' argument.

2008-04-26  Per Abrahamsen  <abraham@dina.kvl.dk>

	* biopore_drain.C: New model.
	* Makefile (MODELS): Added it.

	* tertiary_biopores.C: New model.
	* Makefile (MODELS): Added it.

	* biopore_matrix.C: Renamed from 'biopore_matrix.C'.
	* Makefile (MODELS): Adjusted.

2008-04-25  Per Abrahamsen  <abraham@dina.kvl.dk>

	* tertiary.C, tertiary.h: New component.
	* Makefile (COMPONENTS): Added it.

	* biopore_std.C: New model.
	* Makefile (MODELS): Added it.

	* imvec.C, imvec.h: New utility.
	* Makefile (OTHER): Added it.

2008-04-22  Per Abrahamsen  <abraham@dina.kvl.dk>

	* transport_Hansen.C (TransportHansen::flow): Bug fix.

	* movement_solute.C, movement_solute.h (divide_top_incomming)
	(divide_top_outgoing, zero_top): New utilities.
	(MovementSolute::solute): Call it.
	* movement_solute.C (MovementSolute::solute): Call them.

2008-04-17  Per Abrahamsen  <abraham@dina.kvl.dk>

	* biopore.C, biopore.h: New component.

	* parser_file.C (add_derived): Specify library name in messages.

	* mobsol.h, mobsol.C: Renamed component to 'secondary'.
	* secondary.h, secondary.C: Renamed component from 'mobsol'.
	* Makefile (COMPONENTS): Ditto.
	* all: Updated callers.
	
2008-04-14  Per Abrahamsen  <abraham@dina.kvl.dk>

	* chemical_std.C: Obey 'Mobsol::alpha'.
	* all: Don't pass 'dt' for solute source terms.

2008-04-08  Per Abrahamsen  <abraham@dina.kvl.dk>

	* movement_solute.C, movement_solute.h: New intermeditate model.

2008-04-02  Per Abrahamsen  <abraham@dina.kvl.dk>
