@@ -22,12 +22,14 @@
 #define TERTIARY_H
 
 #include "model.h"
+#include <map>
 
 class Block;
 class Geometry;
 class Soil;
 class SoilWater;
 class Surface;
+class Chemical;
 class Scope;
 class Treelog;
 class Log;
@@ -38,15 +40,23 @@ class Tertiary : public ModelAListed
 public:
   static const char *const component;
   symbol library_id () const;
-
+  virtual bool has_macropores () = 0;
   // Simulation.
 public:
+  void tick (const Geometry&, const Soil&, const double dt, 
+             SoilWater&, Surface&, Treelog&);
+private:
   virtual void tick_water (const Geometry&, const Soil&, const SoilWater&,
                            const double dt,
                            Surface& surface,
                            std::vector<double>& S_drain,
                            std::vector<double>& S_matrix, 
                            std::vector<double>& q_tertiary, Treelog& msg) = 0;
+public:
+  virtual void solute (const Geometry&, const SoilWater&, 
+                       const std::map<size_t, double>& J_tertiary,
+                       const double dt,
+                       Chemical&, Treelog&) = 0;
   virtual void output (Log&) const = 0;
 
   // Create and Destroy.
