@@ -39,6 +39,10 @@ struct TertiaryBiopores : public Tertiary
   const double pressure_end;	 // Pressure after pref.flow has been init [cm]
   const double pond_max;	 // Pond height before activating pref.flow [mm]
 
+  // Identity.
+  bool has_macropores ()
+  { return true; }
+
   // Simulation.
   void extract_water (const Geometry&, const Soil&, const SoilWater&,
                       const double dt,
@@ -54,6 +58,11 @@ struct TertiaryBiopores : public Tertiary
                    std::vector<double>& S_drain,
                    std::vector<double>& S_matrix, 
                    std::vector<double>& q_tertiary, Treelog& msg);
+  void solute (const Geometry&, const SoilWater&,
+               const std::map<size_t, double>& J_tertiary,
+               const double /* dt */,
+               Chemical&, Treelog&)
+  { }
   void output (Log&) const;
   
   // Create and Destroy.
